add evaluation script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
     "gradio==4.16.0", "gradio_client==0.8.1",
     "requests", "httpx==0.24.0", "uvicorn", "fastapi",
-    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.16", "soundfile", "torchaudio==2.1.2", "deepspeed==0.14.4", "flash-attn==2.6.3", "ninja", "wandb", "qwen_vl_utils", "openai-whisper", "ftfy", "numba"
+    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.9.16", "soundfile", "torchaudio==2.1.2", "deepspeed==0.14.4", "flash-attn==2.6.3", "ninja", "wandb", "qwen_vl_utils", "openai-whisper", "ftfy", "numba", "jiwer"
 ]
 
 [project.optional-dependencies]
